
// @ts-ignore 
export * from './protos/mathService'
export const MathServiceName = 'math'
export const MathServicePath = `${__dirname}/protos/mathService.proto`
// @ts-ignore 
export * from './protos/mathServiceTwo'
export const MathServiceTwoName = 'math2'
export const MathServiceTwoPath = `${__dirname}/protos/mathServiceTwo.proto`